--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
